Use virtual threads for task scope